// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should render a Table with 2 levels 1`] = `
<ElementaryTable
  elevatedColumnIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  elevatedRowIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  id="table-foo"
  indexesMapping={
    {
      "absolute": {
        "0": {
          "index": 0,
          "parentIndex": null,
        },
        "1": {
          "index": 1,
          "parentIndex": null,
        },
        "2": {
          "index": 2,
          "parentIndex": null,
        },
      },
      "relative": {
        "0": {
          "index": 0,
        },
        "1": {
          "index": 1,
        },
        "2": {
          "index": 2,
        },
      },
    }
  }
  onRowClose={[Function]}
  onRowOpen={[Function]}
  openedTrees={{}}
  rows={
    [
      {
        "cells": [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ],
        "id": "front",
        "isHeader": true,
        "isSelectable": false,
      },
      {
        "cells": [
          {
            "id": "react",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ],
        "id": "front1",
        "title": "foo",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "subItems": [],
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back",
      },
    ]
  }
  rowsProps={{}}
  selectedCells={{}}
/>
`;

exports[`Table component should render a Table with 3 levels 1`] = `
<ElementaryTable
  elevatedColumnIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  elevatedRowIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  id="table-foo"
  indexesMapping={
    {
      "absolute": {
        "0": {
          "index": 0,
          "parentIndex": null,
        },
        "1": {
          "index": 1,
          "parentIndex": null,
        },
        "2": {
          "index": 2,
          "parentIndex": null,
        },
      },
      "relative": {
        "0": {
          "index": 0,
        },
        "1": {
          "index": 1,
        },
        "2": {
          "index": 2,
        },
      },
    }
  }
  onRowClose={[Function]}
  onRowOpen={[Function]}
  openedTrees={{}}
  rows={
    [
      {
        "cells": [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ],
        "id": "front",
        "isHeader": true,
        "isSelectable": false,
      },
      {
        "cells": [
          {
            "id": "react",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "sushi",
                            "value": "Sushi",
                          },
                          {
                            "id": "pizza",
                            "value": "Pizza",
                          },
                          {
                            "id": "mafe",
                            "value": "Mafe",
                          },
                        ],
                        "id": "miam",
                      },
                    ],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "sushi",
                            "value": "Sushi",
                          },
                          {
                            "id": "pizza",
                            "value": "Pizza",
                          },
                          {
                            "id": "mafe",
                            "value": "Mafe",
                          },
                        ],
                        "id": "miam",
                      },
                    ],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ],
        "id": "front1",
        "title": "foo",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "subItems": [],
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back",
      },
    ]
  }
  rowsProps={{}}
  selectedCells={{}}
/>
`;

exports[`Table component should render a Table with spans 1`] = `
<ElementaryTable
  elevatedColumnIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  elevatedRowIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  id="table-foo"
  indexesMapping={
    {
      "absolute": {
        "0": {
          "index": 0,
          "parentIndex": null,
        },
        "1": {
          "index": 1,
          "parentIndex": null,
        },
        "2": {
          "index": 2,
          "parentIndex": null,
        },
      },
      "relative": {
        "0": {
          "index": 0,
        },
        "1": {
          "index": 1,
        },
        "2": {
          "index": 2,
        },
      },
    }
  }
  isSpan={true}
  onRowClose={[Function]}
  onRowOpen={[Function]}
  openedTrees={{}}
  rows={
    [
      {
        "cells": [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ],
        "id": "front",
        "isHeader": true,
        "isSelectable": false,
      },
      {
        "cells": [
          {
            "id": "react",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ],
        "id": "front1",
        "title": "foo",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back",
      },
    ]
  }
  rowsProps={{}}
  selectedCells={{}}
/>
`;

exports[`Table component should render a responsive Table 1`] = `
<ResponsiveContainer>
  [Function]
</ResponsiveContainer>
`;

exports[`Table component should render a selectable Table 1`] = `
<SelectionHandler>
  [Function]
</SelectionHandler>
`;

exports[`Table component should render a virtualized Table 1`] = `
<Virtualizer
  columnsLength={3}
  customCellsHeight={
    {
      "customSizes": {},
      "fixed": {
        "count": 0,
        "sum": 0,
      },
      "scrollable": {
        "count": 0,
        "sum": 0,
      },
    }
  }
  customCellsWidth={
    {
      "customSizes": {},
      "fixed": {
        "count": 0,
        "sum": 0,
      },
      "scrollable": {
        "count": 0,
        "sum": 0,
      },
    }
  }
  fixedColumns={[]}
  fixedRows={[]}
  height={300}
  hiddenColumns={[]}
  hiddenRows={[]}
  horizontalPadding={0}
  initialScroll={
    {
      "columnIndex": 3,
      "rowIndex": 4,
    }
  }
  rowsLength={3}
  verticalPadding={0}
  width={400}
>
  [Function]
</Virtualizer>
`;

exports[`Table component should render the default table 1`] = `
<ElementaryTable
  elevatedColumnIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  elevatedRowIndexes={
    {
      "absoluteEndPositions": {},
      "elevations": {},
    }
  }
  id="table-foo"
  indexesMapping={
    {
      "absolute": {
        "0": {
          "index": 0,
          "parentIndex": null,
        },
        "1": {
          "index": 1,
          "parentIndex": null,
        },
        "2": {
          "index": 2,
          "parentIndex": null,
        },
        "3": {
          "index": 3,
          "parentIndex": null,
        },
        "4": {
          "index": 4,
          "parentIndex": null,
        },
        "5": {
          "index": 5,
          "parentIndex": null,
        },
      },
      "relative": {
        "0": {
          "index": 0,
        },
        "1": {
          "index": 1,
        },
        "2": {
          "index": 2,
        },
        "3": {
          "index": 3,
        },
        "4": {
          "index": 4,
        },
        "5": {
          "index": 5,
        },
      },
    }
  }
  onRowClose={[Function]}
  onRowOpen={[Function]}
  openedTrees={{}}
  rows={
    [
      {
        "cells": [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ],
        "id": "front",
        "isHeader": true,
      },
      {
        "cells": [
          {
            "cellContent": undefined,
            "cellContentProps": undefined,
            "id": "react",
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ],
        "id": "front1",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back",
        "loading": false,
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python1",
          },
          {
            "id": "Go",
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back1",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python2",
          },
          {
            "id": "Go",
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back2",
      },
      {
        "cells": [
          {
            "id": "python",
            "value": "Python3",
          },
          {
            "id": "Go",
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ],
        "id": "back3",
      },
    ]
  }
  rowsProps={{}}
  selectedCells={{}}
/>
`;
